# meishu

./: .containerignore  .gitignore  Cargo.toml  Containerfile  build.rs  build.sh  compose.yaml  openapi.yaml  tailwind.config.js
.github/workflows/: build-push.yaml
docs/: readme.md
migrations/: 20220314170836_init.sql  20220422082229_pending-scores.sql
src/: db.rs  main.rs  models.rs  utils.rs  web.rs
templates/: base.html  leaderboard.html  score.html
