[package]
name = "meishu"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.11.1"
chrono = { version = "0.4", features = ["serde"] }
eyre = "0.6.7"
serde = { version = "1", default-features = false, features = ["derive"] } 
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "migrate", "chrono", "postgres"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.32"
tracing-subscriber = { version = "0.3.9", default-features = false, features = ["std", "fmt", "env-filter", "smallvec", "json", "ansi"] }
warp = "0.3"
